--- a/Assignment/User Card/index.html
+++ b/Assignment/User Card/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="blue">
             <br>
-            <img id="iconuser" src="/Assignment/User Card/icons/user-circle.png" alt="icon user">
+            <img id="iconuser" src="icons/user-circle.png" alt="icon user">
         </div>
         
         <div class="name">
@@ -22,7 +22,7 @@
         </div>
 
         <div class="location">
-            <img id="img" src="/Assignment/User Card/icons/map-marker.png" alt="icon location">
+            <img id="img" src="icons/map-marker.png" alt="icon location">
             <h5>Seattle</h5>
         </div>
 
@@ -32,7 +32,7 @@
         </div>
 
         <div class="edit">
-            <img id="img" src="/Assignment/User Card/icons/gear.png" alt="icon edit">
+            <img id="img" src="icons/gear.png" alt="icon edit">
             <a href="#"> edit profile</a>
         </div>
     </div>
