--- a/Assignment/Profile Page/index.html
+++ b/Assignment/Profile Page/index.html
@@ -15,7 +15,7 @@
             <h1 class="nav-title">Profile</h1>
             <ul class = "nav-list">
                 <li><a href="#">Home</a></li>
-                <li><a href="#" class="active">My Profile</a></li>
+                <li><a href="#" id="active">My Profile</a></li>
                 <li><a href="#">Find Connections</a></li>
             </ul>
         </div>            
@@ -40,8 +40,8 @@
                 </div>
 
                 <div class="info">
-                    <p>Developer | Engineer | Problem Solver</p>
-                    <p>Master of shadows and the Internet!</p>
+                    <h4>Developer | Engineer | Problem Solver</h4>
+                    <h4>Master of shadows and the Internet!</h4>
                 </div>
 
                 <div class="edit">
@@ -51,8 +51,38 @@
             </div>
 
         <div class = education>
+            <div class="black">
+                <p>Education</p>
+            </div>
+            <div class="info-education">
+                <h3>Coding Dojo - Full stack Bootcamp</h3>
+                <h4>Des 2019 - Mar 2020</h4>
+                <h3>STC - Software</h3>
+                <h4>Des 2017 - Fep 2018</h4>
+            </div>
+        </div>
+        </div>
 
+        <div class="connections">
+            <div class = "requests">
+                <div class="black">
+                    <button id="button-add">2</button>
+                    <p>Connections Requests</p>
+                </div>
+                <div class="info-requests">
+                    <div class="new-friend">
+                        <img src="images/adrien-s.jpg" alt="img user">
+                        <h6>Todd E</h6>
+                        <button><img src="icons/accept-circle.png" alt="add user"></button>
+                        <button><img src="icons/close-circle.png" alt="cancel user"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class ="friend">
+            </div>
         </div>
     </div>
+    
 </body>
 </html>
